2001-06-22  Robert COllins  <rbbtcollins@hotmail.com>

	* thread.cc (__pthread_cond_timedwait): Lock the waiting mutex before 
	the condition protect mutex to avoid deadlocking. (Found by Greg Smith).
	(__pthread_cond_wait): Ditto.
	
2001-06-30  Egor Duda  <deo@logos-m.ru>

	* fhandler.cc (fhandler_base::open): Work around windows bug when
	CreateFile() with dwDesiredAccess == 0 called on remote share returns
	valid handle even if file doesn't exist.

2001-06-20  Egor Duda  <deo@logos-m.ru>

	* fhandler_socket.cc (fhandler_socket::signal_secret_event): New
	function.
	* fhandler.h: Declare it.
	* fhandler_socket.cc (fhandler_socket::create_secret_event): Don't
	signal secret event immediately.
	(fhandler_socket::check_peer_secret_event): Do it after peer event
	was opened.
	* net.cc (cygwin_connect): Or if socket is non-blocking.
	(cygwin_accept): Ditto.

Mon Jun 18 17:09:25 2001  Christopher Faylor <cgf@cygnus.com>

	* fhandler_tty.cc (fhandler_tty_slave::init): Revert 2001-06-16 change.

	* fork.cc (fork_copy): Print more debugging info.
	(fork_parent): Change order of arguments to accomdate buggy gcc.
	(fork): Ditto.

Sun Jun 17 18:54:46 2001  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (_unlink): Reorganize to try harder to delete file with
	DeleteFile and to recover more gracefully if FILE_FLAG_DELETE_ON_CLOSE
	doesn't work properly.

Sat Jun 16 13:06:49 2001  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (sig_handle_tty_stop): Reset PID_STOPPED if not
	actually stopping.
	* fhandler_console.cc (fhandler_console::fixup_after_fork): Don't set
	controlling terminal if just inheriting a handle.
	(fhandler_console::fixup_after_exec): Ditto.
	* fhandler_tty.cc (fhandler_tty_slave::init): Ditto.
	* signal.cc (kill_worker): Set appropriate errno if proc_exists
	determines that process does not really exist.

Fri Jun 15 14:34:19 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (path_conv::check): Deal more robustly with foo/ behavior.
